# actserv-onboarding-platform

./: .coveragerc  .gitignore  .hintrc  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.alpine  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  schema.yaml  start.sh  test_api_e2e.py
backend/actserv_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/forms/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/forms/migrations/: 0001_initial.py  0002_submission_submitted_by.py  0003_auto_add_new_fields.py  0004_rename_forms_submi_form_status_idx_forms_submi_form_id_ff9261_idx_and_more.py  0005_add_deadline_escalation_fields.py
backend/notifications/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_initial.py  0003_notification_notif_user_read_idx.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_celery_integration.py  test_forms_api.py  test_models.py  test_notifications.py  test_submissions_api.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/management/commands/: create_default_admin.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_role.py
docs/: API_REFERENCE.md  ASSESSMENT_NOTES.md  DESIGN.md  DESIGN_DECISIONS.md  Entity Relationship Diagram (ERD).txt  PRODUCT.md  README.md  SETUP.md  TESTING.md  actserv.postman_collection.json  actserv.postman_environment.json  design-decisions.md  setup-instructions.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.alpine  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
frontend/__tests__/: ConditionalValidation.test.tsx  FieldTypes.test.tsx  FileValidation.test.tsx  FormRenderer.test.tsx  api.test.ts
frontend/src/app/: HomePageClient.tsx  globals.css  globals.d.ts  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/admin/: AdminDashboardClient.tsx  page.tsx
frontend/src/app/admin/forms/create/: page.tsx
frontend/src/app/admin/forms/edit/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/forms/: FormsListClient.tsx  page.tsx
frontend/src/app/forms/[slug]/: page.tsx
frontend/src/app/login/: LoginClient.tsx  page.tsx
frontend/src/app/register/: RegisterClient.tsx  page.tsx
frontend/src/app/submission-success/: page.tsx
frontend/src/components/: FeatureCard.tsx  FormBuilder.tsx  FormRenderer.tsx  Navbar.tsx  VisualFormBuilder.tsx
frontend/src/lib/: api.ts
plans/: frontend-review-plan.md  improvement_plan.md  swagger_warnings_plan.md
